--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFi7KZ8uQWQg/2QPhhOZ4w",
+      "authorship_tag": "ABX9TyMQWru920KV8zqvGkhLiD75",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,17 @@
       "source": [
         "print(\"hola\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"que tal\")"
+      ],
+      "metadata": {
+        "id": "ojmWsOPSupRb"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
