--- a/Rule_based.ipynb
+++ b/Rule_based.ipynb
@@ -37,6 +37,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/saraxmartin/NegExES.git"
+      ],
+      "metadata": {
+        "id": "rzv8UPJRf23r",
+        "outputId": "e8e02d3c-6064-483c-f609-76cdb40a6cd7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'NegExES'...\n",
+            "remote: Enumerating objects: 41, done.\u001b[K\n",
+            "remote: Counting objects: 100% (41/41), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (40/40), done.\u001b[K\n",
+            "remote: Total 41 (delta 19), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (41/41), 1.92 MiB | 3.62 MiB/s, done.\n",
+            "Resolving deltas: 100% (19/19), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "88EEjn-vyJTA"
@@ -51,12 +80,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "3IKyO6BIxaK-"
       },
       "outputs": [],
       "source": [
+        "import os\n",
         "import spacy\n",
         "from spellchecker import SpellChecker\n",
         "# Load the Spanish language model from spaCy\n",
@@ -117,64 +147,55 @@
     {
       "cell_type": "code",
       "source": [
-        "filenames = ['cdlanatomia.xml', 'cdlatenciointegrada.xml', 'cdlcronicitat.xml', 'cdlfisioterapia.xml',\n",
-        "             'cdlhomeopatia.xml', 'cdlimmunologia.xml', 'cdlinfermeria.xml', 'cdlmalaltiesmetaboliquesmaratotv32015.xml',\n",
-        "             'cdlneurociencia.xml', 'cdloftalmologia.xml', 'cdlotorinolaringologia2aed.xml', 'cdlpsiquiatria.xml',\n",
-        "             'cdlrecercaclinica.xml', 'cdlsinologia2015.xml', 'cdlvacunes.xml', 'tdlictusilesionsmedullarslamaratotv3.xml',\n",
-        "             'TO Ciencies de la salut (Fisiologia patologica).xml']"
-      ],
-      "metadata": {
-        "id": "u8qcH_A499XF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import xml.etree.ElementTree as ET\n",
         "\n",
         "medicalterms_es = set()\n",
         "medicalterms_cat = set()\n",
         "\n",
-        "for file in filenames:\n",
-        "  # Parse the XML file\n",
-        "  tree = ET.parse(file)\n",
-        "  root = tree.getroot()\n",
+        "directory = '/content/NegExES/data/termcat_terminologies'\n",
         "\n",
-        "  # Iterate over each 'fitxa' element\n",
-        "  for fitxa in root.findall('.//fitxa'):\n",
-        "      # Iterate over each 'denominacio' element within the 'fitxa'\n",
-        "      for denominacio in fitxa.findall('denominacio'):\n",
-        "          if denominacio.get('llengua') == 'es':\n",
-        "            medicalterms_es.add(denominacio.text)\n",
-        "          elif denominacio.get('llengua') == 'ca':\n",
-        "            medicalterms_cat.add(denominacio.text)\n",
+        "for filename in os.listdir(directory):\n",
+        "    if filename.endswith('.xml'):\n",
+        "        # Construct the full path to the XML file\n",
+        "        file_path = os.path.join(directory, filename)\n",
+        "\n",
+        "        # Parse the XML file\n",
+        "        tree = ET.parse(file_path)\n",
+        "        root = tree.getroot()\n",
+        "\n",
+        "        # Iterate over each 'fitxa' element\n",
+        "        for fitxa in root.findall('.//fitxa'):\n",
+        "            # Iterate over each 'denominacio' element within the 'fitxa'\n",
+        "            for denominacio in fitxa.findall('denominacio'):\n",
+        "                if denominacio.get('llengua') == 'es':\n",
+        "                    medicalterms_es.add(denominacio.text)\n",
+        "                elif denominacio.get('llengua') == 'ca':\n",
+        "                    medicalterms_cat.add(denominacio.text)\n",
         "\n",
         "medicalterms_es = list(medicalterms_es)\n",
-        "medicalterms_cat = list(medicalterms_cat)"
+        "medicalterms_cat = list(medicalterms_cat)\n",
+        "print(len(medicalterms_es))\n",
+        "print(len(medicalterms_cat))\n",
+        "print(medicalterms_es[:20])\n",
+        "print(medicalterms_cat[:20])"
       ],
       "metadata": {
-        "id": "W8spoulABN7S",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 356
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3afac17c-67ad-479c-f031-abcc878aef7a"
+        "id": "YCL8U0Hal9xd",
+        "outputId": "82eb1cb6-5685-4d85-fbf7-d3bd07a97b95"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: 'cdlanatomia.xml'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-8299fe21e65c>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfilenames\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0;31m# Parse the XML file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m   \u001b[0mtree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mET\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m   \u001b[0mroot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetroot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.10/xml/etree/ElementTree.py\u001b[0m in \u001b[0;36mparse\u001b[0;34m(source, parser)\u001b[0m\n\u001b[1;32m   1220\u001b[0m     \"\"\"\n\u001b[1;32m   1221\u001b[0m     \u001b[0mtree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mElementTree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1222\u001b[0;31m     \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1223\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1224\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.10/xml/etree/ElementTree.py\u001b[0m in \u001b[0;36mparse\u001b[0;34m(self, source, parser)\u001b[0m\n\u001b[1;32m    567\u001b[0m         \u001b[0mclose_source\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    568\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"read\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 569\u001b[0;31m             \u001b[0msource\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    570\u001b[0m             \u001b[0mclose_source\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    571\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'cdlanatomia.xml'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "17052\n",
+            "17394\n",
+            "['conducto semicircular posterior', 'rinoscopia posterior', 'vacuna antineumocócica conjugada 13-valente', 'sudoresis', 'astigmatismo contra la regla', 'índice de Barthel', 'autoacusación', 'abrebocas', 'dilución', 'cymba conchalis', 'masoterapia', 'contracción paradójica', 'plexo nervioso', 'subículo', 'radiodenso', 'flujo', 'VRE', 'neuritis óptica', 'isquion', 'idea']\n",
+            "['múscul constrictor superior de la faringe', 'oftàlmia', 'grànul primari', 'isquèmia retinal', 'siringomièlia', 'fibra arcuada externa', 'limbe de la fossa oval', 'deliri secundari', 'artèria capsular mitjana', 'tromofília', 'anquilosi fibrosa', 'prova unilateral', 'asèpsia', 'iatrogènic -a', 'lligaments de Cooper', 'VRE', 'degeneració hepatolenticular', 'intumescència cervical', 'idea', 'prepart']\n"
           ]
         }
       ]
@@ -212,7 +233,9 @@
       "source": [
         "import json\n",
         "\n",
-        "with open('negacio_train_v2024.json', 'r') as file:\n",
+        "train_data = \"/content/NegExES/data/negacio_train_v2024.json\"\n",
+        "\n",
+        "with open(train_data, 'r') as file:\n",
         "    json_data = file.read()\n",
         "\n",
         "data = json.loads(json_data)\n",
@@ -285,7 +308,8 @@
       ],
       "source": [
         "# Add rule tags we found to the ones we have from the training dataset\n",
-        "with open('extra_rules.txt', 'r') as file:\n",
+        "\n",
+        "with open('/content/NegExES/data/extra_rules.txt', 'r') as file:\n",
         "    file_extra_rules = file.read()\n",
         "\n",
         "extra_rules = []\n",
